# probable-fortnight

./: .gitignore  CMakeLists.txt  README.md
python/: LenNet5_CNN.ipynb  export_test_samples.py  export_weights.py  lenet5_mnist.pth
python/hex_weights/: conv1_bias.mem  conv1_weight.mem  conv2_bias.mem  conv2_weight.mem  fc1_bias.mem  fc1_weight.mem  fc2_bias.mem  fc2_weight.mem  fc3_bias.mem  fc3_weight.mem
src/: benchmark.hpp  loader.cpp  loader.hpp  main.cpp  ops.cpp  ops.hpp  quantize.hpp  tensor.hpp
tests/: test_conv.cpp  test_matmul.cpp  test_quantize.cpp
